# boxtube-tui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  boxtube.sh  pyproject.toml  requirements.txt
boxtube/: __init__.py  account.py  app.py  boxtube.tcss  config.py  engine.py  opener.py  player.py  player_screen.py  settings_screen.py  thumbnails.py  youtube.py
docs/: accounts.md  architecture.md  configuration.md  development.md  installation.md  troubleshooting.md  usage.md
tests/: conftest.py  test_account.py  test_app.py  test_config.py  test_engine.py  test_opener.py  test_player.py  test_player_screen.py  test_thumbnails.py  test_youtube.py
