[project]
name = "boxtube"
version = "0.1.0"
description = "A TUI YouTube client with in-terminal playback and thumbnails."
requires-python = ">=3.10"
dependencies = [
    "textual>=0.60",
    "textual-image[textual]>=0.6",
    "pillow>=10.0",
    "yt-dlp>=2025.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
boxtube = "boxtube.app:main"

[tool.setuptools]
packages = ["boxtube"]

[tool.setuptools.package-data]
boxtube = ["*.tcss"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "network: tests that access the network (deselect with -m 'not network')",
]
